# RustInput

./: Cargo.toml  README.md
src/: input.rs  lib.rs  main.rs
